all section complete this assignment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment-3</title>
     <!-- icon style -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Tailwind and daisyUI link -->
@@ -149,11 +149,11 @@
               <h2 class="card-title">12.90$ - 18.85$</h2>
               <p>Apples</p>
               <div class="rating">
-                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400"  />
+                <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400"checked />
+                <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400"  />
+                <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
               </div>
                
                  <div> <!-- details -->
@@ -201,15 +201,15 @@
               <h2 class="card-title">12.90$ - 18.85$</h2>
               <p>Orange</p>
               <div class="rating">
-                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400"  />
+                <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400"checked />
+                <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
               </div>
               <div> <!-- details -->
                 <!-- Open the modal using ID.showModal() method -->
-               <button class="btn" onclick="my_modal_1.showModal()">Details</button>
+               <button class="btn" onclick="my_modal_2.showModal()">Details</button>
                  <dialog id="my_modal_2" class="modal items-center justify-center">
         <form method="dialog" class="modal-box  items-center ml-12">
           <div class="card w-80 border ">
@@ -259,12 +259,12 @@
               </div>
               <div> <!-- details -->
                 <!-- Open the modal using ID.showModal() method -->
-               <button class="btn" onclick="my_modal_1.showModal()">Details</button>
+               <button class="btn" onclick="my_modal_3.showModal()">Details</button>
                  <dialog id="my_modal_3" class="modal items-center justify-center">
         <form method="dialog" class="modal-box  items-center ml-12">
           <div class="card w-80 border ">
             <figure class="px-10 pt-10">
-              <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
+              <img src="images/fruit4.png" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
               <h2 class="card-title">Orange</h2>
@@ -309,7 +309,7 @@
             
               <div> <!-- details -->
                 <!-- Open the modal using ID.showModal() method -->
-               <button class="btn" onclick="my_modal_1.showModal()">Details</button>
+               <button class="btn" onclick="my_modal_4.showModal()">Details</button>
                  <dialog id="my_modal_4" class="modal items-center justify-center">
         <form method="dialog" class="modal-box  items-center ml-12">
           <div class="card w-80 border ">
